--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "milligram": "1.3.0",
     "vue": "2.5.21",
     "vue-router": "3.0.2"
   },
